--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
+    "axios": "^1.13.4",
     "framer-motion": "^12.29.0",
     "gsap": "^3.14.2",
     "postprocessing": "^6.38.2",
