--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@types/suncalc": "^1.9.2",
     "@types/three": "^0.182.0",
     "axios": "^1.13.4",
     "framer-motion": "^12.29.0",
@@ -22,6 +23,7 @@
     "postprocessing": "^6.38.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "suncalc": "^1.9.0",
     "three": "^0.182.0",
     "weather-react-icons": "^4.0.2",
     "web-vitals": "^5.1.0",
